--- a/mainPage.css
+++ b/mainPage.css
@@ -1,6 +1,6 @@
 
 .body{
-    background: #ffffff; overflow-x: hidden;
+    background: #222222; overflow-x: hidden;
     animation-name: fadeIn;
     animation-duration: 1.5s;
 
